# Robotic_Arm_LTTS

./: README.md
ltts_bringup/: CMakeLists.txt  package.xml
ltts_controller/: CMakeLists.txt  package.xml
ltts_controller/config/: ltts_controllers.yaml
ltts_controller/launch/: ltts_controller.launch.py
ltts_description/: CMakeLists.txt
ltts_description/launch/: display.launch.py
ltts_description/urdf/: ros2control.xacro
ltts_description/worlds/: empty.world
ltts_moveit/config/: ltts.srdf  moveit_controllers.yaml
ltts_vision/: setup.cfg
pymoveit2/examples/: ex_fk.py  ex_ik.py  ex_joint_goal.py  ex_pose_goal.py  ex_servo.py  pick_and_place.py
pymoveit2/pymoveit2/robots/: ltts.py
src/: README.md
src/ltts_bringup/launch/: pick_and_place.launch.py
src/ltts_controller/launch/: slider_controller.launch.py
src/ltts_controller/ltts_controller/: slider_controller.py
src/ltts_description/: package.xml
src/ltts_description/launch/: gazebo.launch.py
src/ltts_description/rviz/: display.rviz
src/ltts_description/urdf/: arm.xacro  gazebo.xacro  ltts.urdf.xacro  materials.xacro  sensors.xacro
src/ltts_description/worlds/: empty_old.world
src/ltts_moveit/: CMakeLists.txt  package.xml
src/ltts_moveit/config/: initial_positions.yaml  joint_limits.yaml
src/ltts_moveit/launch/: moveit.launch.py
src/ltts_vision/: package.xml  setup.py
src/ltts_vision/ltts_vision/: color_detector.py
src/pymoveit2/: package.xml
src/pymoveit2/examples/: automate.py  ex_allow_collisions.py  ex_clear_planning_scene.py  ex_collision_mesh.py  ex_gripper.py  (+2 more)
(+1 files in other folders)
